--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r -i /Users/dimaldon/.ssh ./build/* julianjnv85@julianjnv85.mooo.com:~/web_project_api_full/frontend"
   },
   "eslintConfig": {
     "extends": [
