--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -2,7 +2,9 @@
   "extends": "airbnb-base",
   "rules": {
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
-    "import/extensions": [0],
-    "plugins": ["import"]
+    "import/extensions": ["error", "ignorePackages"],
+    "no-underscore-dangle": "off",
+    "consistent-return": "off",
+    "object-shorthand": "off"
   }
 }
